get all si units replaced with regular  strings. upright was replaced with strings in eqs

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -6815,6 +6815,88 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Elsevier BV},
 }
 
+@Article{Kim2013,
+  author       = {Kim, Seihwan and Lee, Hyoung Jin and Park, Ji Hyun and Jeung, In-Seuck},
+  date         = {2013},
+  journaltitle = {Proceedings of the Combustion Institute},
+  title        = {Effects of a wall on the self-ignition patterns and flame propagation of high-pressure hydrogen release through a tube},
+  doi          = {10.1016/j.proci.2012.09.001},
+  issn         = {1540-7489},
+  number       = {2},
+  pages        = {2049--2056},
+  volume       = {34},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Kitabayashi2013,
+  author       = {Kitabayashi, N. and Wada, Y. and Mogi, T. and Saburi, T. and Hayashi, A.K.},
+  date         = {2013-06},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Experimental study on high pressure hydrogen jets coming out of tubes of 0.1–4.2 m in length},
+  doi          = {10.1016/j.ijhydene.2012.10.040},
+  issn         = {0360-3199},
+  number       = {19},
+  pages        = {8100--8107},
+  volume       = {38},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Grune2014,
+  author       = {Grune, J. and Sempert, K. and Kuznetsov, M. and Jordan, T.},
+  date         = {2014-12},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Experimental investigation of flame and pressure dynamics after spontaneous ignition in tube geometry},
+  doi          = {10.1016/j.ijhydene.2014.05.046},
+  issn         = {0360-3199},
+  number       = {35},
+  pages        = {20396--20403},
+  volume       = {39},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Duan2016,
+  author       = {Duan, Qiangling and Xiao, Huahua and Gao, Wei and Gong, Liang and Wang, Qingsong and Sun, Jinhua},
+  date         = {2016-10},
+  journaltitle = {Fuel},
+  title        = {Experimental study on spontaneous ignition and flame propagation of high-pressure hydrogen release via a tube into air},
+  doi          = {10.1016/j.fuel.2016.05.066},
+  issn         = {0016-2361},
+  pages        = {811--819},
+  volume       = {181},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Gong2016,
+  author       = {Gong, Liang and Duan, Qiangling and Jiang, Lin and Jin, Kaiqiang and Sun, Jinhua},
+  date         = {2016-10},
+  journaltitle = {Fuel},
+  title        = {Experimental study of pressure dynamics, spontaneous ignition and flame propagation during hydrogen release from high-pressure storage tank through 15 mm diameter tube and exhaust chamber connected to atmosphere},
+  doi          = {10.1016/j.fuel.2016.05.127},
+  issn         = {0016-2361},
+  pages        = {419--427},
+  volume       = {182},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Wang2019,
+  author       = {Wang, Zhilei and Pan, Xuhai and Wang, Qingyuan and Jiang, Yiming and Xu, Xiaodan and Yan, Weiyang and Jiang, Juncheng},
+  date         = {2019-08},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Experimental study on spontaneous ignition and flame propagation of high-pressure hydrogen release through tubes},
+  doi          = {10.1016/j.ijhydene.2019.06.188},
+  issn         = {0360-3199},
+  number       = {40},
+  pages        = {22584--22597},
+  volume       = {44},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
