--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -6897,6 +6897,75 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Elsevier BV},
 }
 
+@Article{Jin2021,
+  author       = {Jin, Kaiyan and Yang, Shengnan and Gong, Liang and Han, Yifei and Yang, Xiaolong and Gao, Yunji and Zhang, Yuchun},
+  date         = {2021-09},
+  journaltitle = {Journal of Loss Prevention in the Process Industries},
+  title        = {Numerical study on the spontaneous ignition of pressurized hydrogen during its sudden release into the tube with varying lengths and diameters},
+  doi          = {10.1016/j.jlp.2021.104592},
+  issn         = {0950-4230},
+  pages        = {104592},
+  volume       = {72},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Kim2013a,
+  author       = {Kim, Yeong Ryeon and Lee, Hyoung Jin and Kim, Seihwan and Jeung, In-Seuck},
+  date         = {2013},
+  journaltitle = {Proceedings of the Combustion Institute},
+  title        = {A flow visualization study on self-ignition of high pressure hydrogen gas released into a tube},
+  doi          = {10.1016/j.proci.2012.07.020},
+  issn         = {1540-7489},
+  number       = {2},
+  pages        = {2057--2064},
+  volume       = {34},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Xu2014,
+  author       = {Xu, B.P. and Wen, J.X.},
+  date         = {2014-12},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {The effect of tube internal geometry on the propensity to spontaneous ignition in pressurized hydrogen release},
+  doi          = {10.1016/j.ijhydene.2014.04.141},
+  issn         = {0360-3199},
+  number       = {35},
+  pages        = {20503--20508},
+  volume       = {39},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Xu2012,
+  author       = {Xu, B.P. and Wen, J.X.},
+  date         = {2012-11},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Numerical study of spontaneous ignition in pressurized hydrogen release through a length of tube with local contraction},
+  doi          = {10.1016/j.ijhydene.2012.04.150},
+  issn         = {0360-3199},
+  number       = {22},
+  pages        = {17571--17579},
+  volume       = {37},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Li2019,
+  author       = {Li, Ping and Duan, Qiangling and Zeng, Qian and Jin, Kaiqiang and Chen, Jiayan and Sun, Jinhua},
+  date         = {2019-09},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Experimental study of spontaneous ignition induced by sudden hydrogen release through tubes with different shaped cross-sections},
+  doi          = {10.1016/j.ijhydene.2019.07.083},
+  issn         = {0360-3199},
+  number       = {42},
+  pages        = {23821--23831},
+  volume       = {44},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -6956,5 +7025,5 @@ Part 1: Flow capacities up to and including 120 g/s},
 4 StaticGroup:pressure_vessel_Section\;0\;0\;\;\;\;;
 3 StaticGroup:mobility\;0\;1\;0x7c7c7cff\;\;\;;
 2 StaticGroup:hydrogen_section\;0\;1\;\;\;\;;
-3 StaticGroup:h_safety\;0\;1\;\;\;\;;
+3 StaticGroup:h_safety\;0\;0\;\;\;\;;
 }
