experiments inshalalh corrected

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -6966,6 +6966,27 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Elsevier BV},
 }
 
+@InProceedings{wolanski1973investigation,
+  author    = {Wolanski, P},
+  booktitle = {Fourteenth Symposium (International) on Combustion, 1973},
+  title     = {Investigation into the mechanism of the diffusion ignition of a combustible gas flowing into an oxidizing atmosphere},
+  groups    = {h_safety},
+  year      = {1973},
+}
+
+@Article{Ayi2024,
+  author       = {Ayi, Charles and Sripaul, Edison and Vaddiraju, Sreeram and Khan, Faisal},
+  date         = {2024-11},
+  journaltitle = {International Journal of Hydrogen Energy},
+  title        = {Is hydrogen ignition data from literature practically observed?},
+  doi          = {10.1016/j.ijhydene.2024.09.269},
+  issn         = {0360-3199},
+  pages        = {746--759},
+  volume       = {89},
+  groups       = {h_safety},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
