with typst v_12 for bib files the field note finally works - mashallah

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -902,7 +902,7 @@ Now available to download in full as a PDF.},
 @Patent{blair2015composite,
   title={Composite conformable pressure vessel},
   author={Blair, Michael D. and Kunz, Richard and Warner, Mark J. and Davis, Kevin and Wolcott, Edward and Turner, Darrel and Bennett, John},
-  annote={US5577630A},
+  note={US5577630A},
   assignee={Northrop Grumman Innovation Systems LLC},
   year={1996},
   month={nov},
@@ -916,7 +916,7 @@ Now available to download in full as a PDF.},
 @Patent{Stahl2017,
   author    = {Stahl, Hans-Ulrich},
   title     = {Fahrzeug mit lasttragendem Drucktank},
-  annote      = {DE102015225385A1},
+  note      = {DE102015225385A1},
   day       = {22},
   groups    = {hydro_Plane, report_1, patents},
   month     = {jun} ,
@@ -929,7 +929,7 @@ Now available to download in full as a PDF.},
 @Patent{ChristophBechtold2019,
   author    = {Christoph Bechtold, Florian Eidmann},
   title     = {Lasttragender Drucktank zur Speicherung von Brennstoff und Kraftfahrzeug},
-  annote      = {DE102017011492A1},
+  note      = {DE102017011492A1},
   day       = {26},
   groups    = {hydro_Plane, report_1, patents},
   month     = {sep},
@@ -942,7 +942,7 @@ Now available to download in full as a PDF.},
 @Patent{Pugh1994,
   author    = {Pugh, Nicholas},
   title     = {Integrated chassis and compressed gas fuel system of an automotive vehicle},
-  annote      = {US5370418A},
+  note      = {US5370418A},
   groups    = {hydro_Plane, patents},
   month     = {dec},
   publisher = {Google Patents},
@@ -3923,7 +3923,7 @@ Now available to download in full as a PDF.},
   author  = {Phillip Scheffel},
   date    = {2015},
   title   = {TUBESTRUCT integral high-pressure tube tank The basic idea is a single-tube structure of a wing, where the tubes are loaded under high internal pressure as well as able to absorb thrust and torsion loads from stresses in the flight. The tubes can absorb hydrogen, methane or other volatile gases.},
-  annote    = {DE102015008178A1},
+  note    = {DE102015008178A1},
   type    = {Patent},
   url     = {https://patents.google.com/patent/DE102015008178A1/en?oq=Dokument+DE102015008178A1},
   urldate = {2024-09-03},
@@ -6987,6 +6987,18 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Elsevier BV},
 }
 
+@Misc{heinze2023aircraft,
+  author      = {Heinze, Wolfgang},
+  title       = {Entwerfen von {Verkehrsflugzeugen II}},
+  note        = {Unpublished lecture materials},
+  type        = {Lecture Notes},
+  address     = {Braunschweig, Germany},
+  groups      = {loads},
+  institution = {Technische Universit{\"a}t Braunschweig},
+  year        = {2023},
+}
+
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -7045,6 +7057,7 @@ Part 1: Flow capacities up to and including 120 g/s},
 4 StaticGroup:airacft_subsection\;0\;1\;0x707070ff\;\;\;;
 4 StaticGroup:pressure_vessel_Section\;0\;0\;\;\;\;;
 3 StaticGroup:mobility\;0\;1\;0x7c7c7cff\;\;\;;
-2 StaticGroup:hydrogen_section\;0\;1\;\;\;\;;
+2 StaticGroup:hydrogen_section\;0\;0\;\;\;\;;
 3 StaticGroup:h_safety\;0\;0\;\;\;\;;
+2 StaticGroup:loads\;0\;1\;\;\;\;;
 }
