load case some references added

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -444,18 +444,6 @@
   year    = {1963},
 }
 
-@TechReport{Butt2021,
-  author   = {Javed Butt},
-  title    = {Development of a module for mission analysis for a gradient-based aerodynamic shape optimization process},
-  year     = {2021},
-  month    = {September},
-  abstract = {The overall goal of this thesis is to calculate the fuel consumption and its gradients with respect to later introduced shape parameters for one or multiple individual flight missions.},
-  groups   = {master},
-  keywords = {Multidisciplinary Optimization, Navier-Stokes equations, gradients},
-  school   = {TU Braunschweig},
-  url      = {https://elib.dlr.de/144285/},
-}
-
 @Book{Argyris2017,
   author    = {John Argyris and Gunter Faust and Maria Haase and Rudolf Friedrich},
   title     = {Die Erforschung des Chaos},
@@ -6998,6 +6986,452 @@ Part 1: Flow capacities up to and including 120 g/s},
   year        = {2023},
 }
 
+@Article{Yang2021a,
+  author       = {Yang, Xiang I. A. and Griffin, Kevin P.},
+  date         = {2021-01},
+  journaltitle = {Physics of Fluids},
+  title        = {Grid-point and time-step requirements for direct numerical simulation and large-eddy simulation},
+  doi          = {10.1063/5.0036515},
+  issn         = {1089-7666},
+  number       = {1},
+  volume       = {33},
+  groups       = {loads},
+  publisher    = {AIP Publishing},
+}
+
+@Article{Koomey2011,
+  author       = {Koomey, Jonathan and Berard, Stephen and Sanchez, Marla and Wong, Henry},
+  date         = {2011-03},
+  journaltitle = {IEEE Annals of the History of Computing},
+  title        = {Implications of Historical Trends in the Electrical Efficiency of Computing},
+  doi          = {10.1109/mahc.2010.28},
+  issn         = {1934-1547},
+  number       = {3},
+  pages        = {46--54},
+  volume       = {33},
+  groups       = {loads},
+  publisher    = {Institute of Electrical and Electronics Engineers (IEEE)},
+}
+
+@Article{Moore1998,
+  author       = {Moore, G.E.},
+  date         = {1998-01},
+  journaltitle = {Proceedings of the IEEE},
+  title        = {Cramming More Components Onto Integrated Circuits},
+  doi          = {10.1109/jproc.1998.658762},
+  issn         = {1558-2256},
+  number       = {1},
+  pages        = {82--85},
+  volume       = {86},
+  groups       = {loads},
+  publisher    = {Institute of Electrical and Electronics Engineers (IEEE)},
+}
+
+@Article{HernandezAguirre2022,
+  author       = {Hernandez-Aguirre, Alberto and Hernandez-Martinez, Eliseo and López-Isunza, Felipe and Castillo, Carlos O.},
+  date         = {2022-02},
+  journaltitle = {Chemical Engineering Journal},
+  title        = {Framing a novel approach for pseudo continuous modeling using Direct Numerical Simulations (DNS): Fluid dynamics in a packed bed reactor},
+  doi          = {10.1016/j.cej.2021.132061},
+  issn         = {1385-8947},
+  pages        = {132061},
+  volume       = {429},
+  groups       = {loads},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Kochkov2021,
+  author       = {Kochkov, Dmitrii and Smith, Jamie A. and Alieva, Ayya and Wang, Qing and Brenner, Michael P. and Hoyer, Stephan},
+  date         = {2021-05},
+  journaltitle = {Proceedings of the National Academy of Sciences},
+  title        = {Machine learning–accelerated computational fluid dynamics},
+  doi          = {10.1073/pnas.2101784118},
+  issn         = {1091-6490},
+  number       = {21},
+  volume       = {118},
+  groups       = {loads},
+  publisher    = {Proceedings of the National Academy of Sciences},
+}
+
+@Book{Blazek2015,
+  author    = {Blazek, Jiri},
+  date      = {2015},
+  title     = {Computational fluid dynamics},
+  edition   = {Third edition},
+  isbn      = {9780080999951},
+  location  = {Amsterdam},
+  note      = {Literaturangaben},
+  pagetotal = {447},
+  publisher = {Butterworth-Heinemann, an imprint of Elsevier},
+  subtitle  = {Principles and applications},
+  groups    = {loads},
+  ppn_gvk   = {1615228373},
+}
+
+@Article{Fu2020,
+  author       = {Fu, Lin and Karp, Michael and Bose, Sanjeeb T. and Moin, Parviz and Urzay, Javier},
+  date         = {2020-12},
+  journaltitle = {Journal of Fluid Mechanics},
+  title        = {Shock-induced heating and transition to turbulence in a hypersonic boundary layer},
+  doi          = {10.1017/jfm.2020.935},
+  issn         = {1469-7645},
+  volume       = {909},
+  groups       = {loads},
+  publisher    = {Cambridge University Press (CUP)},
+}
+
+@Article{Barba2019,
+  author       = {Barba, Lorena and Mesnard, Olivier},
+  date         = {2019-05},
+  journaltitle = {Journal of Open Source Education},
+  title        = {Aero Python: classical aerodynamics of potential flow using Python},
+  doi          = {10.21105/jose.00045},
+  issn         = {2577-3569},
+  number       = {15},
+  pages        = {45},
+  volume       = {2},
+  groups       = {loads},
+  publisher    = {The Open Journal},
+}
+
+@InBook{Drela1989,
+  author    = {Drela, Mark},
+  booktitle = {Low Reynolds Number Aerodynamics},
+  date      = {1989},
+  title     = {XFOIL: An Analysis and Design System for Low Reynolds Number Airfoils},
+  doi       = {10.1007/978-3-642-84010-4_1},
+  isbn      = {9783642840104},
+  pages     = {1--12},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {loads},
+  issn      = {0176-5035},
+}
+
+@PhdThesis{aerosandbox_phd_thesis,
+  author = {Sharpe, Peter D.},
+  title  = {Accelerating Practical Engineering Design Optimization with Computational Graph Transformations},
+  groups = {loads},
+  school = {Massachusetts Institute of Technology},
+  year   = {2024},
+}
+
+@Article{Verdugo2022,
+  author       = {Verdugo, Francesc and Badia, Santiago},
+  date         = {2022-07},
+  journaltitle = {Computer Physics Communications},
+  title        = {The software design of Gridap: A Finite Element package based on the Julia JIT compiler},
+  doi          = {10.1016/j.cpc.2022.108341},
+  issn         = {0010-4655},
+  pages        = {108341},
+  volume       = {276},
+  groups       = {loads},
+  publisher    = {Elsevier BV},
+}
+
+@Book{Wild2022,
+  author    = {Wild, Jochen},
+  date      = {2022},
+  title     = {High-Lift Aerodynamics},
+  edition   = {First edition.},
+  isbn      = {1000532569},
+  location  = {[Place of publication not identified]},
+  pagetotal = {1332},
+  publisher = {CRC Press,},
+  groups    = {loads},
+  ppn_gvk   = {1876805129},
+}
+
+@Book{Goodfellow2016,
+  author    = {Goodfellow, Ian},
+  date      = {2016},
+  title     = {Deep learning},
+  editor    = {Aaron Courville and Yoshua Bengio},
+  isbn      = {9780262337373},
+  location  = {Cambridge, Massachusetts},
+  note      = {Includes bibliographical references and index},
+  pagetotal = {1775},
+  publisher = {The MIT Press},
+  series    = {Adaptive computation and machine learning},
+  groups    = {loads},
+  ppn_gvk   = {1789979978},
+}
+
+@Article{Cuomo2022,
+  author       = {Cuomo, Salvatore and Di Cola, Vincenzo Schiano and Giampaolo, Fabio and Rozza, Gianluigi and Raissi, Maziar and Piccialli, Francesco},
+  date         = {2022-07},
+  journaltitle = {Journal of Scientific Computing},
+  title        = {Scientific Machine Learning Through Physics–Informed Neural Networks: Where we are and What’s Next},
+  doi          = {10.1007/s10915-022-01939-z},
+  issn         = {1573-7691},
+  number       = {3},
+  volume       = {92},
+  groups       = {loads},
+  publisher    = {Springer Science and Business Media LLC},
+}
+
+@Article{Habehh2021,
+  author       = {Habehh, Hafsa and Gohel, Suril},
+  date         = {2021-12},
+  journaltitle = {Current Genomics},
+  title        = {Machine Learning in Healthcare},
+  doi          = {10.2174/1389202922666210705124359},
+  issn         = {1389-2029},
+  number       = {4},
+  pages        = {291--300},
+  volume       = {22},
+  groups       = {loads},
+  publisher    = {Bentham Science Publishers Ltd.},
+}
+
+@Article{Alanazi2022,
+  author       = {Alanazi, Abdullah},
+  date         = {2022},
+  journaltitle = {Informatics in Medicine Unlocked},
+  title        = {Using machine learning for healthcare challenges and opportunities},
+  doi          = {10.1016/j.imu.2022.100924},
+  issn         = {2352-9148},
+  pages        = {100924},
+  volume       = {30},
+  groups       = {loads},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Masud2021,
+  author       = {Masud, Mehedi and Sikder, Niloy and Nahid, Abdullah-Al and Bairagi, Anupam Kumar and AlZain, Mohammed A.},
+  date         = {2021-01},
+  journaltitle = {Sensors},
+  title        = {A Machine Learning Approach to Diagnosing Lung and Colon Cancer Using a Deep Learning-Based Classification Framework},
+  doi          = {10.3390/s21030748},
+  issn         = {1424-8220},
+  number       = {3},
+  pages        = {748},
+  volume       = {21},
+  groups       = {loads},
+  publisher    = {MDPI AG},
+}
+
+@Article{Black2022,
+  author       = {Black, Jason E and Kueper, Jacqueline K and Williamson, Tyler S},
+  date         = {2022-10},
+  journaltitle = {Family Practice},
+  title        = {An introduction to machine learning for classification and prediction},
+  doi          = {10.1093/fampra/cmac104},
+  issn         = {1460-2229},
+  number       = {1},
+  pages        = {200--204},
+  volume       = {40},
+  groups       = {loads},
+  publisher    = {Oxford University Press (OUP)},
+}
+
+@Article{Charbuty2021,
+  author       = {Charbuty, Bahzad and Abdulazeez, Adnan},
+  date         = {2021-03},
+  journaltitle = {Journal of Applied Science and Technology Trends},
+  title        = {Classification Based on Decision Tree Algorithm for Machine Learning},
+  doi          = {10.38094/jastt20165},
+  issn         = {2708-0757},
+  number       = {01},
+  pages        = {20--28},
+  volume       = {2},
+  groups       = {loads},
+  publisher    = {Interdisciplinary Publishing Academia},
+}
+
+@InBook{Palimkar2021,
+  author    = {Palimkar, Prajyot and Shaw, Rabindra Nath and Ghosh, Ankush},
+  booktitle = {Advanced Computing and Intelligent Technologies},
+  date      = {2021-07},
+  title     = {Machine Learning Technique to Prognosis Diabetes Disease: Random Forest Classifier Approach},
+  doi       = {10.1007/978-981-16-2164-2_19},
+  isbn      = {9789811621642},
+  pages     = {219--244},
+  publisher = {Springer Singapore},
+  groups    = {loads},
+  issn      = {2367-3389},
+}
+
+@Book{Cristianini2000,
+  author    = {Cristianini, Nello and Shawe-Taylor, John},
+  date      = {2000-03},
+  title     = {An Introduction to Support Vector Machines and Other Kernel-based Learning Methods},
+  doi       = {10.1017/cbo9780511801389},
+  isbn      = {9780511801389},
+  publisher = {Cambridge University Press},
+  groups    = {loads},
+}
+
+@Book{Murty2016,
+  author       = {Murty, M.N. and Raghava, Rashmi},
+  date         = {2016},
+  title        = {Support Vector Machines and Perceptrons: Learning, Optimization, Classification, and Application to Social Networks},
+  doi          = {10.1007/978-3-319-41063-0},
+  isbn         = {9783319410630},
+  publisher    = {Springer International Publishing},
+  groups       = {loads},
+  issn         = {2191-5776},
+  journaltitle = {SpringerBriefs in Computer Science},
+}
+
+@Article{Suyal2022,
+  author       = {Suyal, Manish and Goyal, Parul},
+  date         = {2022-07},
+  journaltitle = {International Journal of Engineering Trends and Technology},
+  title        = {A Review on Analysis of K-Nearest Neighbor Classification Machine Learning Algorithms based on Supervised Learning},
+  doi          = {10.14445/22315381/ijett-v70i7p205},
+  issn         = {2231-5381},
+  number       = {7},
+  pages        = {43--48},
+  volume       = {70},
+  groups       = {loads},
+  publisher    = {Seventh Sense Research Group Journals},
+}
+
+@Article{Dumitrescu2022,
+  author       = {Dumitrescu, Elena and Hué, Sullivan and Hurlin, Christophe and Tokpavi, Sessi},
+  date         = {2022-03},
+  journaltitle = {European Journal of Operational Research},
+  title        = {Machine learning for credit scoring: Improving logistic regression with non-linear decision-tree effects},
+  doi          = {10.1016/j.ejor.2021.06.053},
+  issn         = {0377-2217},
+  number       = {3},
+  pages        = {1178--1192},
+  volume       = {297},
+  groups       = {loads},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Itoo2020,
+  author       = {Itoo, Fayaz and Meenakshi and Singh, Satwinder},
+  date         = {2020-02},
+  journaltitle = {International Journal of Information Technology},
+  title        = {Comparison and analysis of logistic regression, Naïve Bayes and KNN machine learning algorithms for credit card fraud detection},
+  doi          = {10.1007/s41870-020-00430-y},
+  issn         = {2511-2112},
+  number       = {4},
+  pages        = {1503--1511},
+  volume       = {13},
+  groups       = {loads},
+  publisher    = {Springer Science and Business Media LLC},
+}
+
+@Article{Ahmad2020,
+  author       = {Ahmad, Iftikhar and Yousaf, Muhammad and Yousaf, Suhail and Ahmad, Muhammad Ovais},
+  date         = {2020-10},
+  journaltitle = {Complexity},
+  title        = {Fake News Detection Using Machine Learning Ensemble Methods},
+  doi          = {10.1155/2020/8885861},
+  editor       = {Uddin, M. Irfan},
+  issn         = {1076-2787},
+  pages        = {1--11},
+  volume       = {2020},
+  groups       = {loads},
+  publisher    = {Hindawi Limited},
+}
+
+@Article{Li2023c,
+  author       = {Li, Yehao and Yao, Ting and Pan, Yingwei and Mei, Tao},
+  date         = {2023-02},
+  journaltitle = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  title        = {Contextual Transformer Networks for Visual Recognition},
+  doi          = {10.1109/tpami.2022.3164083},
+  issn         = {1939-3539},
+  number       = {2},
+  pages        = {1489--1500},
+  volume       = {45},
+  groups       = {loads},
+  publisher    = {Institute of Electrical and Electronics Engineers (IEEE)},
+}
+
+@Article{vaswani2017attention,
+  author  = {Vaswani, A},
+  title   = {Attention is all you need},
+  groups  = {loads},
+  journal = {Advances in Neural Information Processing Systems},
+  year    = {2017},
+}
+
+@Article{Sastrawan2022,
+  author       = {Sastrawan, I. Kadek and Bayupati, I.P.A. and Arsa, Dewa Made Sri},
+  date         = {2022-09},
+  journaltitle = {ICT Express},
+  title        = {Detection of fake news using deep learning CNN–RNN based methods},
+  doi          = {10.1016/j.icte.2021.10.003},
+  issn         = {2405-9595},
+  number       = {3},
+  pages        = {396--408},
+  volume       = {8},
+  groups       = {loads},
+  publisher    = {Elsevier BV},
+}
+
+@Article{You2022,
+  author       = {You, Aram and Kim, Jin Kuk and Ryu, Ik Hee and Yoo, Tae Keun},
+  date         = {2022-02},
+  journaltitle = {Eye and Vision},
+  title        = {Application of generative adversarial networks (GAN) for ophthalmology image domains: a survey},
+  doi          = {10.1186/s40662-022-00277-3},
+  issn         = {2326-0254},
+  number       = {1},
+  volume       = {9},
+  groups       = {loads},
+  publisher    = {Springer Science and Business Media LLC},
+}
+
+@Article{Qu2024,
+  author      = {Qu, Haohao and Ning, Liangbo and An, Rui and Fan, Wenqi and Derr, Tyler and Liu, Hui and Xu, Xin and Li, Qing},
+  date        = {2024-08-02},
+  title       = {A Survey of Mamba},
+  doi         = {10.48550/ARXIV.2408.01129},
+  eprint      = {2408.01129},
+  eprintclass = {cs.LG},
+  eprinttype  = {arXiv},
+  abstract    = {As one of the most representative DL techniques, Transformer architecture has empowered numerous advanced models, especially the large language models (LLMs) that comprise billions of parameters, becoming a cornerstone in deep learning. Despite the impressive achievements, Transformers still face inherent limitations, particularly the time-consuming inference resulting from the quadratic computation complexity of attention calculation. Recently, a novel architecture named Mamba, drawing inspiration from classical state space models (SSMs), has emerged as a promising alternative for building foundation models, delivering comparable modeling abilities to Transformers while preserving near-linear scalability concerning sequence length. This has sparked an increasing number of studies actively exploring Mamba's potential to achieve impressive performance across diverse domains. Given such rapid evolution, there is a critical need for a systematic review that consolidates existing Mamba-empowered models, offering a comprehensive understanding of this emerging model architecture. In this survey, we therefore conduct an in-depth investigation of recent Mamba-associated studies, covering three main aspects: the advancements of Mamba-based models, the techniques of adapting Mamba to diverse data, and the applications where Mamba can excel. Specifically, we first review the foundational knowledge of various representative deep learning models and the details of Mamba-1&2 as preliminaries. Then, to showcase the significance of Mamba for AI, we comprehensively review the related studies focusing on Mamba models' architecture design, data adaptability, and applications. Finally, we present a discussion of current limitations and explore various promising research directions to provide deeper insights for future investigations.},
+  copyright   = {Creative Commons Attribution Non Commercial Share Alike 4.0 International},
+  file        = {:Qu2024 - A Survey of Mamba.pdf:PDF:http\://arxiv.org/pdf/2408.01129v4},
+  groups      = {loads},
+  keywords    = {Machine Learning (cs.LG), Artificial Intelligence (cs.AI), FOS: Computer and information sciences},
+  publisher   = {arXiv},
+  year        = {2024},
+}
+
+@Article{Robinson2022,
+  author       = {Robinson, Haakon and Pawar, Suraj and Rasheed, Adil and San, Omer},
+  date         = {2022-10},
+  journaltitle = {Neural Networks},
+  title        = {Physics guided neural networks for modelling of non-linear dynamics},
+  doi          = {10.1016/j.neunet.2022.07.023},
+  issn         = {0893-6080},
+  pages        = {333--345},
+  volume       = {154},
+  groups       = {loads},
+  publisher    = {Elsevier BV},
+}
+
+@InProceedings{Kaur2023,
+  author    = {Kaur, Rupinder and Mohammadi, Farah},
+  booktitle = {2023 IEEE 25th Electronics Packaging Technology Conference (EPTC)},
+  date      = {2023-12},
+  title     = {Power Estimation and Comparison of Heterogenous CPU-GPU Processors},
+  doi       = {10.1109/eptc59621.2023.10457590},
+  pages     = {948--951},
+  publisher = {IEEE},
+  groups    = {loads},
+}
+
+@Article{DeLuca2024,
+  author       = {De Luca, Pasquale and Galletti, Ardelio and Marcellino, Livia},
+  date         = {2024-08},
+  journaltitle = {Applied Sciences},
+  title        = {Power Consumption Comparison of GPU Linear Solvers for Cellular Potts Model Simulations},
+  doi          = {10.3390/app14167028},
+  issn         = {2076-3417},
+  number       = {16},
+  pages        = {7028},
+  volume       = {14},
+  groups       = {loads},
+  publisher    = {MDPI AG},
+}
 
 @Comment{jabref-meta: databaseType:biblatex;}
 
