--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -423,6 +423,40 @@
 }
 
 
+
+@Online{link_ray2024,
+    title = {Ray: A Distributed Computing Framework},
+    author = {{Ray Team}},
+    year = {2024},
+    url = {https://github.com/ray-project/ray},
+    description = {An AI compute engine consisting of a core distributed runtime and a set of AI Libraries for accelerating ML workloads},
+    institution = {Anyscale Inc.},
+    type = {software},
+    urldate = {2024-10-24},
+}
+
+@Online{link_deepspeed2024,
+  title = {DeepSpeed: A Deep Learning Optimization Library},
+  author = {{Microsoft Research}},
+  year = {2024},
+  url = {https://github.com/microsoft/DeepSpeed},
+  description = {A deep learning optimization library that makes distributed training and inference easy, efficient, and effective},
+  institution = {Microsoft Corporation},
+  urldate = {2024-10-24},
+  type = {software}
+  }
+
+  @Online{link_accelerate2024,
+    title = {Accelerate: A Library for Easy PyTorch Distributed Training},
+    author = {{Hugging Face Team}},
+    year = {2024},
+    url = {https://github.com/huggingface/accelerate},
+    description = {A library providing a simple way to train and use PyTorch models on various devices and distributed configurations, with automatic mixed precision and FSDP/DeepSpeed support},
+    institution = {Hugging Face},
+  urldate = {2024-10-24},
+    type = {software}
+    }
+
 @MastersThesis{Pierzyna2021,
   author = {Maximilian Pierzyna},
   school = {TU Braunschweig},
@@ -7428,6 +7462,225 @@ Part 1: Flow capacities up to and including 120 g/s},
   issn         = {2076-3417},
   number       = {16},
   pages        = {7028},
+  volume       = {14},
+  groups       = {loads},
+  publisher    = {MDPI AG},
+}
+
+@Misc{tensorflow2015_whitepaper,
+  author = {Mart\'{i}n~Abadi and Ashish~Agarwal and Paul~Barham and Eugene~Brevdo and Zhifeng~Chen and Craig~Citro and Greg~S.~Corrado and Andy~Davis and Jeffrey~Dean and Matthieu~Devin and Sanjay~Ghemawat and Ian~Goodfellow and Andrew~Harp and Geoffrey~Irving and Michael~Isard and Yangqing Jia and Rafal~Jozefowicz and Lukasz~Kaiser and Manjunath~Kudlur and Josh~Levenberg and Dandelion~Man\'{e} and Rajat~Monga and Sherry~Moore and Derek~Murray and Chris~Olah and Mike~Schuster and Jonathon~Shlens and Benoit~Steiner and Ilya~Sutskever and Kunal~Talwar and Paul~Tucker and Vincent~Vanhoucke and Vijay~Vasudevan and Fernanda~Vi\'{e}gas and Oriol~Vinyals and Pete~Warden and Martin~Wattenberg and Martin~Wicke and Yuan~Yu and Xiaoqiang~Zheng},
+  title  = {{TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
+  note   = {Software available from tensorflow.org},
+  url    = {https://www.tensorflow.org/},
+  groups = {loads},
+  year   = {2015},
+}
+
+@Article{Sergeev2018,
+  author      = {Sergeev, Alexander and Del Balso, Mike},
+  date        = {2018-02-15},
+  title       = {Horovod: fast and easy distributed deep learning in TensorFlow},
+  doi         = {10.48550/ARXIV.1802.05799},
+  eprint      = {1802.05799},
+  eprintclass = {cs.LG},
+  eprinttype  = {arXiv},
+  abstract    = {Training modern deep learning models requires large amounts of computation, often provided by GPUs. Scaling computation from one GPU to many can enable much faster training and research progress but entails two complications. First, the training library must support inter-GPU communication. Depending on the particular methods employed, this communication may entail anywhere from negligible to significant overhead. Second, the user must modify his or her training code to take advantage of inter-GPU communication. Depending on the training library's API, the modification required may be either significant or minimal. Existing methods for enabling multi-GPU training under the TensorFlow library entail non-negligible communication overhead and require users to heavily modify their model-building code, leading many researchers to avoid the whole mess and stick with slower single-GPU training. In this paper we introduce Horovod, an open source library that improves on both obstructions to scaling: it employs efficient inter-GPU communication via ring reduction and requires only a few lines of modification to user code, enabling faster, easier distributed training in TensorFlow. Horovod is available under the Apache 2.0 license at https://github.com/uber/horovod},
+  copyright   = {arXiv.org perpetual, non-exclusive license},
+  file        = {:Sergeev2018 - Horovod_ Fast and Easy Distributed Deep Learning in TensorFlow.pdf:PDF:http\://arxiv.org/pdf/1802.05799v3},
+  groups      = {loads},
+  keywords    = {Machine Learning (cs.LG), Machine Learning (stat.ML), FOS: Computer and information sciences},
+  publisher   = {arXiv},
+  year        = {2018},
+}
+
+@Article{Edelen2020,
+  author       = {Edelen, Auralee and Neveu, Nicole and Frey, Matthias and Huber, Yannick and Mayes, Christopher and Adelmann, Andreas},
+  date         = {2020-04},
+  journaltitle = {Physical Review Accelerators and Beams},
+  title        = {Machine learning for orders of magnitude speedup in multiobjective optimization of particle accelerator systems},
+  doi          = {10.1103/physrevaccelbeams.23.044601},
+  issn         = {2469-9888},
+  number       = {4},
+  pages        = {044601},
+  volume       = {23},
+  groups       = {loads},
+  publisher    = {American Physical Society (APS)},
+}
+
+@Article{Meng2022,
+  author       = {Meng, Debiao and Yang, Shiyuan and He, Chao and Wang, Hongtao and Lv, Zhiyuan and Guo, Yipeng and Nie, Peng},
+  date         = {2022-07},
+  journaltitle = {International Journal of Structural Integrity},
+  title        = {Multidisciplinary design optimization of engineering systems under uncertainty: a review},
+  doi          = {10.1108/ijsi-05-2022-0076},
+  issn         = {1757-9864},
+  number       = {4},
+  pages        = {565--593},
+  volume       = {13},
+  groups       = {loads},
+  publisher    = {Emerald},
+}
+
+@Article{Mader2020,
+  author       = {Mader, Charles A. and Kenway, Gaetan K. W. and Yildirim, Anil and Martins, Joaquim R. R. A.},
+  date         = {2020-09},
+  journaltitle = {Journal of Aerospace Information Systems},
+  title        = {ADflow: An Open-Source Computational Fluid Dynamics Solver for Aerodynamic and Multidisciplinary Optimization},
+  doi          = {10.2514/1.i010796},
+  issn         = {2327-3097},
+  number       = {9},
+  pages        = {508--527},
+  volume       = {17},
+  groups       = {loads},
+  publisher    = {American Institute of Aeronautics and Astronautics (AIAA)},
+}
+
+@Article{Meng2021,
+  author       = {Meng, Debiao and Li, Yan and He, Chao and Guo, Jinbao and Lv, Zhiyuan and Wu, Peng},
+  date         = {2021-08},
+  journaltitle = {Materials &amp; Design},
+  title        = {Multidisciplinary design for structural integrity using a collaborative optimization method based on adaptive surrogate modelling},
+  doi          = {10.1016/j.matdes.2021.109789},
+  issn         = {0264-1275},
+  pages        = {109789},
+  volume       = {206},
+  groups       = {loads},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Li2019a,
+  author       = {Li, Wei and Gao, Liang and Xiao, Mi},
+  date         = {2019-03},
+  journaltitle = {Engineering Optimization},
+  title        = {Multidisciplinary robust design optimization under parameter and model uncertainties},
+  doi          = {10.1080/0305215x.2019.1590564},
+  issn         = {1029-0273},
+  number       = {3},
+  pages        = {426--445},
+  volume       = {52},
+  groups       = {loads},
+  publisher    = {Informa UK Limited},
+}
+
+@Article{Tian2021,
+  author       = {Tian, Ye and Si, Langchun and Zhang, Xingyi and Cheng, Ran and He, Cheng and Tan, Kay Chen and Jin, Yaochu},
+  date         = {2021-10},
+  journaltitle = {ACM Computing Surveys},
+  title        = {Evolutionary Large-Scale Multi-Objective Optimization: A Survey},
+  doi          = {10.1145/3470971},
+  issn         = {1557-7341},
+  number       = {8},
+  pages        = {1--34},
+  volume       = {54},
+  groups       = {loads},
+  publisher    = {Association for Computing Machinery (ACM)},
+}
+
+@Article{Li2023d,
+  author       = {Li, Wenhua and Zhang, Tao and Wang, Rui and Huang, Shengjun and Liang, Jing},
+  date         = {2023-03},
+  journaltitle = {Swarm and Evolutionary Computation},
+  title        = {Multimodal multi-objective optimization: Comparative study of the state-of-the-art},
+  doi          = {10.1016/j.swevo.2023.101253},
+  issn         = {2210-6502},
+  pages        = {101253},
+  volume       = {77},
+  groups       = {loads},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Ridha2021,
+  author       = {Ridha, Hussein Mohammed and Gomes, Chandima and Hizam, Hashim and Ahmadipour, Masoud and Heidari, Ali Asghar and Chen, Huiling},
+  date         = {2021-01},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+  title        = {Multi-objective optimization and multi-criteria decision-making methods for optimal design of standalone photovoltaic system: A comprehensive review},
+  doi          = {10.1016/j.rser.2020.110202},
+  issn         = {1364-0321},
+  pages        = {110202},
+  volume       = {135},
+  groups       = {loads},
+  publisher    = {Elsevier BV},
+}
+
+@Article{PrabhaharanS_2022,
+  author       = {Prabhaharan S. A. and Balaji, G. and Annamalai, Krishnamoorthy},
+  date         = {2022},
+  journaltitle = {International Journal for Simulation and Multidisciplinary Design Optimization},
+  title        = {Numerical simulation of crashworthiness parameters for design optimization of an automotive crash-box},
+  doi          = {10.1051/smdo/2021036},
+  editor       = {Lebaal, Nadhir and Jeyanthi, Subramanian and Davidson, Jebaseelan and Leninbabu, M.C.},
+  issn         = {1779-6288},
+  pages        = {3},
+  volume       = {13},
+  groups       = {loads},
+  publisher    = {EDP Sciences},
+}
+
+@Article{FragosoMedina2021,
+  author       = {Fragoso-Medina, Omar and Velázquez-Villegas, Fernando},
+  date         = {2021-05},
+  journaltitle = {Mechanics Based Design of Structures and Machines},
+  title        = {Aluminum foam to improve crash safety performance: a numerical simulation approach for the automotive industry},
+  doi          = {10.1080/15397734.2021.1927076},
+  issn         = {1539-7742},
+  number       = {7},
+  pages        = {3583--3597},
+  volume       = {51},
+  groups       = {loads},
+  publisher    = {Informa UK Limited},
+}
+
+@Article{MortazaviMoghaddam2021,
+  author       = {Mortazavi Moghaddam, Alireza and Kheradpisheh, Atefeh and Asgari, Masoud},
+  date         = {2021-02},
+  journaltitle = {Proceedings of the Institution of Mechanical Engineers, Part D: Journal of Automobile Engineering},
+  title        = {A basic design for automotive crash boxes using an efficient corrugated conical tube},
+  doi          = {10.1177/0954407021990921},
+  issn         = {2041-2991},
+  number       = {7},
+  pages        = {1835--1848},
+  volume       = {235},
+  groups       = {loads},
+  publisher    = {SAGE Publications},
+}
+
+@Article{Balena2021,
+  author       = {Balena, Matteo and Mantriota, Giacomo and Reina, Giulio},
+  date         = {2021-06},
+  journaltitle = {Machines},
+  title        = {Dynamic Handling Characterization and Set-Up Optimization for a Formula SAE Race Car via Multi-Body Simulation},
+  doi          = {10.3390/machines9060126},
+  issn         = {2075-1702},
+  number       = {6},
+  pages        = {126},
+  volume       = {9},
+  groups       = {loads},
+  publisher    = {MDPI AG},
+}
+
+@Article{Rahnejat2023,
+  author       = {Rahnejat, H. and Johns-Rahnejat, P.M. and Dolatabadi, N. and Rahmani, R.},
+  date         = {2023-06},
+  journaltitle = {Proceedings of the Institution of Mechanical Engineers, Part K: Journal of Multi-body Dynamics},
+  title        = {Multi-body dynamics in vehicle engineering},
+  doi          = {10.1177/14644193231181666},
+  issn         = {2041-3068},
+  number       = {1},
+  pages        = {3--25},
+  volume       = {238},
+  groups       = {loads},
+  publisher    = {SAGE Publications},
+}
+
+@Article{Benmeddah2024,
+  author       = {Benmeddah, Abdeselem and Jovanović, Vesna and Perić, Sreten and Drakulić, Momir and Đurić, Aleksandar and Marinković, Dragan},
+  date         = {2024-07},
+  journaltitle = {Applied Sciences},
+  title        = {Modeling and Experimental Validation of an Off-Road Truck’s (4 × 4) Lateral Dynamics Using a Multi-Body Simulation},
+  doi          = {10.3390/app14156479},
+  issn         = {2076-3417},
+  number       = {15},
+  pages        = {6479},
   volume       = {14},
   groups       = {loads},
   publisher    = {MDPI AG},
