vn diag img available

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -7686,6 +7686,21 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {MDPI AG},
 }
 
+@Book{Gudmundsson2014,
+  author    = {Gudmundsson, Snorri},
+  date      = {2014},
+  title     = {General aviation aircraft design},
+  isbn      = {9780123973085},
+  location  = {Amsterdam},
+  note      = {Zuerst veröffentlicht 2014 mit ISBN 978-0-12-397308-5. - 2016 veröffentlicht mit ISBN 978-0-12-809998-8},
+  pagetotal = {1},
+  publisher = {Elsevier ; BH Butterworth-Heinemann is an imprint of Elsevier},
+  series    = {MyiLibrary},
+  subtitle  = {Applied methods and procedures},
+  groups    = {loads},
+  ppn_gvk   = {1658523113},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
