--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -4057,6 +4057,17 @@ Now available to download in full as a PDF.},
   groups    = {hydro_books},
 }
 
+@TechReport{EASA_CS_Abbrevs,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Definitions and abbreviations used in Certification Specifications for products, parts and appliances},
+  url = {https://www.easa.europa.eu/en/document-library/agency-decisions/ed-decision-2007016r},
+  urldate = {2024-10-24},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
 @TechReport{EASA_CS_Genereral,
   author      = {{European Union Aviation Safety Agency}},
   institution = {European Union Aviation Safety Agency},
