some progress loadcase

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -1817,6 +1817,18 @@ Now available to download in full as a PDF.},
   owner   = {Mixtral},
 }
 
+@online{link_ADRpy,
+    author = {Sobester, Andras},
+    title = {{ADRpy}: {Aircraft} {Design} {Recipes} in {Python}},
+    year = {2024},
+    publisher = {GitHub},
+    journal = {GitHub repository},
+    url = {https://github.com/sobester/ADRpy},
+    urldate = {2024-04-03},
+    groups  = {webpages},
+
+}
+
 @InProceedings{wu2003non,
   author       = {Wu, S-T and Marquez, MERCEDES ROCio GONZALES},
   booktitle    = {16th Brazilian symposium on computer graphics and Image Processing (SIBGRAPI 2003)},
@@ -7710,6 +7722,20 @@ Part 1: Flow capacities up to and including 120 g/s},
   subtitle  = {Applied methods and procedures},
   groups    = {loads},
   ppn_gvk   = {1658523113},
+}
+
+@Article{Caruana2005,
+  author       = {Caruana, D. and Mignosi, A. and Corrège, M. and Le Pourhiet, A. and Rodde, A.M.},
+  date         = {2005-10},
+  journaltitle = {Aerospace Science and Technology},
+  title        = {Buffet and buffeting control in transonic flow},
+  doi          = {10.1016/j.ast.2004.12.005},
+  issn         = {1270-9638},
+  number       = {7},
+  pages        = {605--616},
+  volume       = {9},
+  groups       = {loads},
+  publisher    = {Elsevier BV},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
