some corrections of loadcases

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -7738,6 +7738,19 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Elsevier BV},
 }
 
+@Article{Kaneko2022,
+  author       = {Kaneko, Shigeki and Yoshimura, Shinobu},
+  date         = {2022-06},
+  journaltitle = {Finite Elements in Analysis and Design},
+  title        = {Fluid–structure–control interaction simulation of flutter control problems},
+  doi          = {10.1016/j.finel.2021.103722},
+  issn         = {0168-874X},
+  pages        = {103722},
+  volume       = {203},
+  groups       = {loads},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
