why static load case

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -4819,6 +4819,17 @@ Part 1: Flow capacities up to and including 120 g/s},
 
 
 
+@TechReport{reg_water_cylinder,
+  author      = {{U.S. Department of Transportation}},
+  institution = {U.S. Department of Transportation},
+  title       = {Title 49, Code of Federal Regulations, Part 180—Continuing Qualification and Maintenance of Packagings},
+  type        = {Federal Regulation},
+  url         = {https://www.ecfr.gov/current/title-49/subtitle-B/chapter-I/subchapter-C/part-180},
+  urldate     = {2024-10-31},
+  groups      = {norms, curv_Theory},
+}
+
+
 @online{tped,
   author      = {APRAGAZ},
   title       = {Transportable pressure equipment (TPED)},
@@ -7812,4 +7823,5 @@ Part 1: Flow capacities up to and including 120 g/s},
 2 StaticGroup:hydrogen_section\;0\;0\;\;\;\;;
 3 StaticGroup:h_safety\;0\;0\;\;\;\;;
 2 StaticGroup:loads\;0\;1\;\;\;\;;
+3 StaticGroup:curv_Theory\;0\;1\;\;\;\;;
 }
