before second correction curv theory

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -7762,6 +7762,16 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Elsevier BV},
 }
 
+@Book{Papula2016,
+  author    = {Papula, Lothar},
+  date      = {2016},
+  title     = {Mathematik für Ingenieure und Naturwissenschaftler Band 3: Vektoranalysis, Wahrscheinlichkeitsrechnung, Mathematische Statistik, Fehler- und Ausgleichsrechnung},
+  doi       = {10.1007/978-3-658-11924-9},
+  isbn      = {9783658119249},
+  publisher = {Springer Fachmedien Wiesbaden},
+  groups    = {curv_Theory},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
