--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -7772,6 +7772,58 @@ Part 1: Flow capacities up to and including 120 g/s},
   groups    = {curv_Theory},
 }
 
+@Book{Baerwolff2020,
+  author    = {Bärwolff, Günter},
+  date      = {2020},
+  title     = {Numerik für Ingenieure, Physiker und Informatiker},
+  doi       = {10.1007/978-3-662-61734-2},
+  isbn      = {9783662617342},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {curv_applied},
+}
+
+@Book{Meister2019,
+  author    = {Meister, Andreas and Sonar, Thomas},
+  date      = {2019},
+  title     = {Numerik: Eine lebendige und gut verständliche Einführung mit vielen Beispielen},
+  doi       = {10.1007/978-3-662-58358-6},
+  isbn      = {9783662583586},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {curv_applied},
+}
+
+@Book{Munz2019,
+  author    = {Munz, Claus-Dieter and Westermann, Thomas},
+  date      = {2019},
+  title     = {Numerische Behandlung gewöhnlicher und partieller Differenzialgleichungen: Ein anwendungsorientiertes Lehrbuch für Ingenieure},
+  doi       = {10.1007/978-3-662-55886-7},
+  isbn      = {9783662558867},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {curv_applied},
+}
+
+@Book{Richter2017,
+  author    = {Richter, Thomas and Wick, Thomas},
+  date      = {2017},
+  title     = {Einführung in die Numerische Mathematik: Begriffe, Konzepte und zahlreiche Anwendungsbeispiele},
+  doi       = {10.1007/978-3-662-54178-4},
+  isbn      = {9783662541784},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {curv_applied},
+}
+
+@Book{Langtangen2017,
+  author       = {Langtangen, Hans Petter and Linge, Svein},
+  date         = {2017},
+  title        = {Finite Difference Computing with PDEs: A Modern Software Approach},
+  doi          = {10.1007/978-3-319-55456-3},
+  isbn         = {9783319554563},
+  publisher    = {Springer International Publishing},
+  groups       = {curv_applied},
+  issn         = {2197-179X},
+  journaltitle = {Texts in Computational Science and Engineering},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -7834,4 +7886,5 @@ Part 1: Flow capacities up to and including 120 g/s},
 3 StaticGroup:h_safety\;0\;0\;\;\;\;;
 2 StaticGroup:loads\;0\;1\;\;\;\;;
 3 StaticGroup:curv_Theory\;0\;1\;\;\;\;;
+3 StaticGroup:curv_applied\;0\;1\;\;\;\;;
 }
