intermedaite curv applicaiton

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -7824,6 +7824,26 @@ Part 1: Flow capacities up to and including 120 g/s},
   journaltitle = {Texts in Computational Science and Engineering},
 }
 
+@Book{Gross2017,
+  author    = {Gross, Dietmar and Ehlers, Wolfgang and Wriggers, Peter and Schröder, Jörg and Müller, Ralf},
+  date      = {2017},
+  title     = {Formeln und Aufgaben zur Technischen Mechanik 2},
+  doi       = {10.1007/978-3-662-53675-9},
+  isbn      = {9783662536759},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {curv_applied},
+}
+
+@Book{Gross2019a,
+  author    = {Gross, Dietmar and Ehlers, Wolfgang and Wriggers, Peter and Schröder, Jörg and Müller, Ralf},
+  date      = {2019},
+  title     = {Formeln und Aufgaben zur Technischen Mechanik 3: Kinetik, Hydrodynamik},
+  doi       = {10.1007/978-3-662-59681-4},
+  isbn      = {9783662596814},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {curv_applied},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
