going inshallah to edeka

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -7844,6 +7844,46 @@ Part 1: Flow capacities up to and including 120 g/s},
   groups    = {curv_applied},
 }
 
+@Article{He2022,
+  author       = {He, Ruiyang and Sun, Haiying and Gao, Xiaoxia and Yang, Hongxing},
+  date         = {2022-09},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+  title        = {Wind tunnel tests for wind turbines: A state-of-the-art review},
+  doi          = {10.1016/j.rser.2022.112675},
+  issn         = {1364-0321},
+  pages        = {112675},
+  volume       = {166},
+  groups       = {physical_loads},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Zhao2022,
+  author       = {Zhao, Yi and Li, Ruibin and Feng, Lu and Wu, Yan and Niu, Jianlei and Gao, Naiping},
+  date         = {2022-10},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+  title        = {Boundary layer wind tunnel tests of outdoor airflow field around urban buildings: A review of methods and status},
+  doi          = {10.1016/j.rser.2022.112717},
+  issn         = {1364-0321},
+  pages        = {112717},
+  volume       = {167},
+  groups       = {physical_loads},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Goizueta2022,
+  author       = {Goizueta, Norberto and Wynn, Andrew and Palacios, Rafael and Drachinsky, Ariel and Raveh, Daniella E.},
+  date         = {2022-07},
+  journaltitle = {Journal of Aircraft},
+  title        = {Flutter Predictions for Very Flexible Wing Wind Tunnel Test},
+  doi          = {10.2514/1.c036710},
+  issn         = {1533-3868},
+  number       = {4},
+  pages        = {1082--1097},
+  volume       = {59},
+  groups       = {physical_loads},
+  publisher    = {American Institute of Aeronautics and Astronautics (AIAA)},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -7907,4 +7947,5 @@ Part 1: Flow capacities up to and including 120 g/s},
 2 StaticGroup:loads\;0\;1\;\;\;\;;
 3 StaticGroup:curv_Theory\;0\;1\;\;\;\;;
 3 StaticGroup:curv_applied\;0\;1\;\;\;\;;
+3 StaticGroup:physical_loads\;0\;1\;\;\;\;;
 }
